# py-pmlib

./: .flake8  .gitattributes  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml
pmlib/: boundary_conditions.py  resonators.py
pmlib/math/: matrix.py
pmlib/utils/: boundaries.py  interpolation.py  matrices.py
scripts/plots/: resonator.py
tests/: test_matrices.py
